@@ -1,3 +1,8 @@
+2022-05-15  Jay Berkenbilt  <ejb@ql.org>
+
+        * Add QUtil::is_long_long to test whether a string can be
+        converted to a long long and back without loss of information.
+
 2022-05-04  Jay Berkenbilt  <ejb@ql.org>
 
         * JSON: add a new "blob" type that takes a function to write data
